Update staff page with new teachers/staff

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -2,11 +2,11 @@
     .row
         .span12#panel-main
             .content
-                %h2 Our Staff
+                %h2 Co-Founders
                 .row
                     .span3
                         .thumbnail
-                            / %img{:src => placehold(180, 140)}
+                            %img{:src => "/assets/board/rick_campion.png"}
                             .caption
                                 %h4 Rick Campion
                                 %p Executive Director
@@ -23,18 +23,80 @@
 
                     .span3
                         .thumbnail
-                            / %img{:src => placehold(180, 140)}
+                            %img{:src => "/assets/board/chancey_anderson.png"}
                             .caption
                                 %h4 Chancey Anderson
                                 %p Principal
                 %br
+                %h3 Classroom Teachers
                 .row
-                    .span3
-                        .thumbnail
-                            / %img{:src => placehold(180, 140)}
-                            .caption
-                                %h4 Rachel Hemsey
-                                %p Founding Teacher
-                    .span9
-                        %p.lead Rachel comes to Prodeo Academy from Excellence Boys Charter School of the Uncommon Schools Network. She started her career as a Teach for America Corps member. Her experience includes Lead Fourth Grade Teacher, Summer Academy Director, Kindergarten Grade Team Chair, and Lead Kindergarten Teacher. Rachel has a B.S. with Distinction from the University of Minnesota and a M.S. with Distinction from Hunter College in New York City.
-                %br
+                    .span12
+                        %ul.thumbnails
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Rachel Hemsey
+                                        %small Kindergarten Teacher/Leadership Team Member
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Mandy Lindstrom
+                                        %small Kindergarten Teacher
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Ashley Willeck
+                                        %small Kindergarten Teacher
+                %h3 Core and Electives
+                .row
+                    .span12
+                        %ul.thumbnails
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 PaviElle French
+                                        %small Fine Arts Coordinator
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Jordan Sallis
+                                        %small Fitness Coordinator
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:jordansallis@prodeoacademy.org"} jordansallis@prodeoacademy.org
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Camilee Sypura
+                                        %small Core Teacher
+                %h3 External Relations and Literacy Support
+                .row
+                    .span12
+                        %ul.thumbnails
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Kelly Mulvehill
+                                        %small External Relations Director,
+                                        %br
+                                        %small Literacy and Mindfulness Teacher
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:kellymulvehill@prodeoacademy.org"} kellymulvehill@prodeoacademy.org
+                %h3 Office and Academic Support
+                .row
+                    .span12
+                        %ul.thumbnails
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Neda Kellogg
+                                        %small Office Manager
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:nedakellogg@prodeoacademy.org"} nedakellogg@prodeoacademy.org
+                            %li.span3
+                                .thumbnail
+                                    .caption
+                                        %h4 Ady Perez
+                                        %small Office and Teaching Assistant
