Add new teacher emails

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -37,16 +37,26 @@
                                     .caption
                                         %h4 Rachel Hemsey
                                         %small Kindergarten Teacher/Leadership Team Member
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:rachelhemsey@prodeoacademy.org"} rachelhemsey@prodeoacademy.org
                             %li.span3
                                 .thumbnail
                                     .caption
                                         %h4 Mandy Lindstrom
                                         %small Kindergarten Teacher
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:mandylindstrom@prodeoacademy.org"} mandylindstrom@prodeoacademy.org
                             %li.span3
                                 .thumbnail
                                     .caption
                                         %h4 Ashley Willeck
                                         %small Kindergarten Teacher
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:ashleywilleck@prodeoacademy.org"} ashleywilleck@prodeoacademy.org
+
                 %h3 Core and Electives
                 .row
                     .span12
@@ -56,6 +66,9 @@
                                     .caption
                                         %h4 PaviElle French
                                         %small Fine Arts Coordinator
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:paviellefrench@prodeoacademy.org"} paviellefrench@prodeoacademy.org
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -69,6 +82,10 @@
                                     .caption
                                         %h4 Camilee Sypura
                                         %small Core Teacher
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:camileesypura@prodeoacademy.org"} camileesypura@prodeoacademy.org
+
                 %h3 External Relations and Literacy Support
                 .row
                     .span12
@@ -100,3 +117,6 @@
                                     .caption
                                         %h4 Ady Perez
                                         %small Office and Teaching Assistant
+                                        %br
+                                        %small
+                                            %a{:href => "mailto:adyperez@prodeoacademy.org"} adyperez@prodeoacademy.org
