--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -6,11 +6,23 @@
         .span8#panel-right
             .content
                 %h2 Volunteer
-                %p.lead If you are inspired by our mission to close the achievement gap and create a culture of learning and support, we would love to hear about it.
+                %p.lead If you are inspired to help close the achievement gap for our students, join us as a volunteer.
+                %p You have opportunities throughout the day Monday through Friday:
+                %ul
+                    %li Tutoring our students in small groups for 1 1/2 hours one to four days per week.  Help our students learn letters, numbers, and colors during tutoring sessions Monday through Thursday:
+                    %ul
+                        %li Mondays and Tuesdays 8:30 AM - 10:00 AM
+                        %li Wednesdays and Thursdays 9:40 AM - 11:10 AM
+                    %br
+                    %li Helping to serve lunch from 11:10 AM - 1:10 PM one to five days per week.
+                    %br
+                    %li Riding the bus home with our students for 30-45 minutes at 4:00 PM one to five days per week.
+                    %br
+                    %li Providing Administrative Assistance support on a flexible schedule throughout the week.
+                %br
                 %p.lead If you have time and talent to share, please contact Rick Campion, Executive Director.
-                %br
-                %br
                 %p
                     %b Rick Campion, Executive Director
-                %p.text-info rickcampion@prodeoacademy.org
+                %p.text-info
+                    %a{:href => "mailto:rickcampion@prodeoacademy.org"} rickcampion@prodeoacademy.org
                 %p.text-info (612) 559-4881
