Correct staff info

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -64,11 +64,11 @@
                             %li.span3
                                 .thumbnail
                                     .caption
-                                        %h4 PaviElle French
+                                        %h4 Sam Reeves
                                         %small Fine Arts Coordinator
                                         %br
                                         %small
-                                            %a{:href => "mailto:paviellefrench@prodeoacademy.org"} paviellefrench@prodeoacademy.org
+                                            %a{:href => "mailto:samreeves@prodeoacademy.org"} samreeves@prodeoacademy.org
                             %li.span3
                                 .thumbnail
                                     .caption
@@ -80,11 +80,11 @@
                             %li.span3
                                 .thumbnail
                                     .caption
-                                        %h4 Camilee Sypura
+                                        %h4 Camille Sypura
                                         %small Core Teacher
                                         %br
                                         %small
-                                            %a{:href => "mailto:camileesypura@prodeoacademy.org"} camileesypura@prodeoacademy.org
+                                            %a{:href => "mailto:camillesypura@prodeoacademy.org"} camillesypura@prodeoacademy.org
 
                 %h3 External Relations and Literacy Support
                 .row
