Add october agenda

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -79,9 +79,11 @@
                             %li
                                 %a{:href => "https://docs.google.com/document/d/1VSyK2PGw1NK8RiSgJYqKvpX97p0knyqD-5LibgPtxo0/edit", :target => "_blank"} May Minutes
                             %li
+                                %a{:href => "#", :target => "_blank"} June Minutes
+                            %li
                                 %span
-                                    %a{:href => "https://docs.google.com/document/d/1VRB4N9ie63htXtfydodgulIyMjLWjJHXQ9TS-9ld9y0/edit", :target => "_blank"} June Agenda
-                                    %i Note: The meeting has been moved from Wednesday, June 19th to Tuesday, June 25th.
+                                    %a{:href => "https://docs.google.com/file/d/0B9F_q1nOg-J-V1BNUjNiU0xaM1E/edit", :target => "_blank"} October Agenda
+                                    %i Note: This meeting has been moved from Wednesday, October 16th to Monday, October 21st.
                         %br
                         %p Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
                         %p Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
