--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -67,27 +67,23 @@
                                     .caption
                                         %h4 Rick Campion
                                         %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
-                        %p.center.lead
+                        %p.lead
                             Our Board meets every third Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
-                .row
-                    .span12
-                        %h3 Past board minutes
-                        %ul
-                            %li
-                                %a{:href => "https://docs.google.com/document/d/1ViAi-SYQn5tk30nmJN1oAzmhR9ZyAIETa02C-7qxZk8/edit", :target => "_blank"} April Minutes
-                            %li
-                                %a{:href => "https://docs.google.com/document/d/1VSyK2PGw1NK8RiSgJYqKvpX97p0knyqD-5LibgPtxo0/edit", :target => "_blank"} May Minutes
-                            %li
-                                %a{:href => "#", :target => "_blank"} June Minutes
-                            %li
-                                %span
-                                    %a{:href => "https://docs.google.com/file/d/0B9F_q1nOg-J-V1BNUjNiU0xaM1E/edit", :target => "_blank"} October Agenda
-                                    %i Note: This meeting has been moved from Wednesday, October 16th to Monday, October 21st.
+                        %p.lead
+                            The upcoming agenda and all past board minutes can be viewed on
+                            %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing", :target => "_blank"} Google Docs
+                            by clicking
+                            = succeed '.' do
+                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing", :target => "_blank"} here
                         %br
-                        %p Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
-                        %p Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
                         %p
-                            Persons interested in learning more about IQS and their oversight of Prodeo Academy may go to:
-                            %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org
-                            or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
+                            %small Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
+                        %p
+                            %small Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
+                        %p
+                            %small
+                                Persons interested in learning more about IQS and their oversight of Prodeo Academy may go to:
+                                %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org
+                                or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
+                        %br
