--- a/app/views/_partials/_partners.haml
+++ b/app/views/_partials/_partners.haml
@@ -19,6 +19,8 @@
     %li
         %i Boston Scientific
     %li
+        %i CH Robinson
+    %li
         %i Fredrikson & Byron, P.A.
     %li
         %i General Mills Foundation
