--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -15,28 +15,10 @@
                                         %small Board Chair, Head of School, Groves Academy
                             %li.span3
                                 .thumbnail
-                                    %img{:src => "/assets/board/kerry_givens.png"}
-                                    .caption
-                                        %h4 Kerry Givens
-                                        %small Executive Director, South Minneapolis YMCA
-                            %li.span3
-                                .thumbnail
                                     %img{:src => "/assets/board/kevin_cattoor.png"}
                                     .caption
                                         %h4 Kevin Cattoor
                                         %small Treasurer, Founder, KC Consulting; CEO Skybridge Americas
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/neda_kellogg.png"}
-                                    .caption
-                                        %h4 Neda Kellogg
-                                        %small Founder and CEO, Project Diva
-                            %li.span3
-                                .thumbnail
-                                    %img{:src => "/assets/board/vidal_guzman.png"}
-                                    .caption
-                                        %h4 Vidal Guzm&aacute;n
-                                        %small Senior Manager at Public Radio International
                             %li.span3
                                 .thumbnail
                                     %img{:src => "/assets/board/tara_stone.png"}
@@ -67,10 +49,32 @@
                                     .caption
                                         %h4 Rick Campion
                                         %small Co-Founder, Executive Director, Prodeo Academy - Ex-Officio
-                        %p.lead
+                %h2 Community Engagment Committe
+                .row
+                    .span12
+                        %ul.thumbnails#board
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/kerry_givens.png"}
+                                    .caption
+                                        %h4 Kerry Givens
+                                        %small Executive Director, South Minneapolis YMCA
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/neda_kellogg.png"}
+                                    .caption
+                                        %h4 Neda Kellogg
+                                        %small Founder and CEO, Project Diva
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => "/assets/board/vidal_guzman.png"}
+                                    .caption
+                                        %h4 Vidal Guzm&aacute;n
+                                        %small Senior Manager at Public Radio International
+                        %p
                             Our Board meets every third Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
-                        %p.lead
+                        %p
                             The upcoming agenda and all past board minutes can be viewed on
                             %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing", :target => "_blank"} Google Docs
                             by clicking
