--- a/app/views/contact/schedule_a_visit.haml
+++ b/app/views/contact/schedule_a_visit.haml
@@ -13,6 +13,6 @@
                 %h2 Schedule a Visit
                 .row
                     .span12
-                        %iframe{:frameborder => "0", :height => "400", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=First+Lutheran+Church+of+Columbia+Heights&aq=&sll=45.041894,-93.236634&sspn=0.00865,0.013357&ie=UTF8&hq=First+Lutheran+Church+of&hnear=Columbia+Heights,+Anoka,+Minnesota&t=m&fll=45.04172,-93.236804&fspn=0.0173,0.026715&st=108572218519324911980&rq=1&ev=zi&split=1&ll=45.049707,-93.236783&spn=0.0173,0.026715&z=14&iwloc=A&cid=16300811330954277974&output=embed", :width => "580"}
+                        %iframe{:frameborder => "0", :height => "400", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "https://www.google.com/maps/embed?pb=!1m5!3m3!1m2!1s0x52b32e65bfef2e5d%3A0xe2381d8a44313456!2sFirst+Lutheran+Church+of+Columbia+Heights%2C+Columbia+Heights%2C+MN!5e0!3m2!1sen!2sus!4v1389458668818", :width => "580"}
                         %br
 
