--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,7 @@
 %html
     %head
         %title Prodeo Academy
-        %link{:href => "//fonts.googleapis.com/css?family=Asap:400,700", :rel => "stylesheet"}
+        %link{:href => "//fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic", :rel => "stylesheet"}
         %link{:href => "/assets/application.css", :rel => "stylesheet"}
         %script{:src => "/assets/application.js"}
     %body
@@ -36,7 +36,7 @@
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Student Life
                                 %span.caret
-                            = submenu(["A Typical Day", "School Calendar", "Academics"], "Student Life")
+                            = submenu(["A Typical Day", "School Calendar", "Academics", "Community Meeting"], "Student Life")
                         %li.dropdown-submenu
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Results
