--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  */
 
 * {
-    font-family: 'Asap', sans-serif;
+    font-family: 'Noto Serif', serif;
 }
 
 body {
@@ -137,7 +137,7 @@ ul.dropdown-menu li a:hover {
 .carousel-caption {
     background-color: transparent;
     position: static;
-    max-width: 550px;
+    max-width: 650px;
     padding: 0 20px;
     margin-bottom: 100px;
 }
