Add new december leader

--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -23,10 +23,15 @@
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/dec/1.jpg')}
                                     .caption
-                                        %h4 Arianna Mwansa
+                                        %h4 Kaleb Lewis
                             %li.span3
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/dec/2.jpg')}
+                                    .caption
+                                        %h4 Arianna Mwansa
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => asset_path('student_life/winners/dec/3.jpg')}
                                     .caption
                                         %h4 Damiyah Willis
                 %h3 November Winners
