--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -72,7 +72,7 @@
                                         %h4 Vidal Guzm&aacute;n
                                         %small Senior Manager at Public Radio International
                         %p
-                            Our Board meets every third Wednesday of the month at 5:30pm at
+                            Our Board meets every fourth Wednesday of the month at 5:30pm at
                             %i 1555 40th Ave NE, Mpls, MN 55421
                         %p
                             The upcoming agenda and all past board minutes can be viewed on
