--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -3,8 +3,9 @@
         .span12#panel-main
             .content
                 %h2 Community Meetings
-                %p We celebrate our values each week at our Community Meeting.  Parents and visitors are always invited to attend.  Come and see our values in action.
-                %p.lead Spirit Stick
+                %p We celebrate our values each week at our Community Meeting. Parents and visitors are always invited to attend. Come and see our values in action.
+                %p Community meetings take place in the gym every Friday from 12:20 - 12:50.
+                %h2 Spirit Stick
                 %p Each week, we choose one scholar who embodies the values of the week.  Meet our Spirit Stick Winners
                 %h3 January Winners
                 .row
