Update typical day schedule

--- a/app/views/student_life/typical_day.haml
+++ b/app/views/student_life/typical_day.haml
@@ -5,70 +5,70 @@
                 %h2 A Typical Day
                 %table.table.table-bordered.table-striped.table-hover
                     %thead
-                        %th{:width => "100px"} Time
-                        %th{:width => "75px"} Length
-                        %th Activity
+                        %th{:width => "110px"} Time
+                        %th{:width => "110px"} Length
+                        %th Activit
                     %tbody
                         %tr
-                            %td 7:00 – 7:30
-                            %td 30 minutes
+                            %td 7:15 – 7:40
+                            %td 25 minutes
                             %td Arrival/Breakfast
                         %tr
-                            %td 7:30 – 7:45
+                            %td 7:40 – 7:55
                             %td 15 minutes
-                            %td Morning Meeting – a joyful celebration and preparation for learning
+                            %td Morning Meeting – A joyful celebration and preparation for learning
                         %tr
-                            %td 7:45 – 8:15
-                            %td 30 minutes
+                            %td 7:55 – 8:10
+                            %td 15 minutes
                             %td Read Aloud
                         %tr
-                            %td 8:15 – 9:15
-                            %td 1 hour
-                            %td Reading Block I (Small Group Activities and Instruction)
+                            %td 8:10 – 8:30
+                            %td 20 minutes
+                            %td Reading Workshop
                         %tr
-                            %td 9:15 – 10:15
-                            %td 1 hour
-                            %td Reading/Tutors (Small Group Activities and Instruction)
+                            %td 8:30 – 9:15
+                            %td 45 minutes
+                            %td Reading Block I (Small Group Activities and Instruction/5 Students)
                         %tr
-                            %td 10:15 – 10:30
+                            %td 9:15 – 10:00
+                            %td 45 minutes
+                            %td Tutoring (Small Group Activities and Instruction/5 Students)
+                        %tr
+                            %td 10:00 – 10:10
                             %td 15 minutes
                             %td Snack/Recess
                         %tr
-                            %td 10:30 – 11:30
-                            %td 1 hour
-                            %td Reading Block II (Small Group Activities and Instruction)
-                        %tr
-                            %td 11:30 – 12:00
+                            %td 10:10 – 10:40
                             %td 30 minutes
-                            %td Math/Tutors (Small Group)
+                            %td Reading Block II (Smaller Group Instruction)
                         %tr
-                            %td 12:00 – 12:30
+                            %td 10:40 – 11:10
                             %td 30 minutes
-                            %td Lunch/Recess
+                            %td Reading Computer Program
                         %tr
-                            %td 12:30 – 1:00
+                            %td 11:10 - 1:10
+                            %td 40 minutes x 3
+                            %td Science/Social Studies, Lunch, Specials (Music/Art/Fitness/Spanish)
+                        %tr
+                            %td 1:10 – 1:40
                             %td 30 minutes
-                            %td PAL - Physically Active Learning (Small Group)
+                            %td Math Meeting/Story Problems
                         %tr
-                            %td 1:00 – 1:30
+                            %td 1:40 – 2:10
                             %td 30 minutes
-                            %td Math
+                            %td Small Group Math Lessons
                         %tr
-                            %td 1:30 – 2:00
+                            %td 2:10 – 2:40
                             %td 30 minutes
-                            %td Math (Small Group / 10 Students)
+                            %td Math Computer Program
                         %tr
-                            %td 2:00 – 2:15
-                            %td 15 minutes
-                            %td Recess
+                            %td 2:40 – 3:20
+                            %td 40 minutes
+                            %td Writing
                         %tr
-                            %td 2:15 – 3:00
-                            %td 45 minutes
-                            %td Science/Social Studies
-                        %tr
-                            %td 3:00 – 3:45
-                            %td 45 minutes
-                            %td Specials:  Music/Art/Dance/Fitness/Spanish
+                            %td 3:20 – 3:40
+                            %td 20 minutes
+                            %td Choice Time
                         %tr
                             %td 3:45
                             %td
