Update spirit stick page

--- a/app/views/student_life/community_meeting.haml
+++ b/app/views/student_life/community_meeting.haml
@@ -15,7 +15,11 @@
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/jan/1.jpg')}
                                     .caption
-                                        %h4 Sarah Martinez
+                                        %h4 Sarah
+                            %li.span3
+                                .thumbnail
+                                    %img{:src => asset_path('student_life/winners/jan/2.jpg')}
+                                    .caption
                 %h3 December Winners
                 .row
                     .span12
@@ -24,17 +28,17 @@
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/dec/1.jpg')}
                                     .caption
-                                        %h4 Kaleb Lewis
+                                        %h4 Kaleb
                             %li.span3
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/dec/2.jpg')}
                                     .caption
-                                        %h4 Arianna Mwansa
+                                        %h4 Arianna
                             %li.span3
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/dec/3.jpg')}
                                     .caption
-                                        %h4 Damiyah Willis
+                                        %h4 Damiyah
                 %h3 November Winners
                 .row
                     .span12
@@ -43,14 +47,14 @@
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/nov/1.jpg')}
                                     .caption
-                                        %h4 Rayquan Gary
+                                        %h4 Rayquan
                             %li.span3
                                 .thumbnail
                                     %img{:src => asset_path('student_life/winners/nov/2.jpg')}
                                     .caption
-                                        %h4 Maurice McLaurin
+                                        %h4 Maurice
                             %li.span3
                                 .thumbnail
                                     %img{:src => "//placehold.it/300x400"}
                                     .caption
-                                        %h4 Alan Romero-Valero
+                                        %h4 Alan
