Add doug jaeger

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -39,6 +39,12 @@
                                         %small Board Secretary, Senior Business Analyst, Target
                             %li.span3
                                 .thumbnail
+                                    %img{:src => "/assets/board/doug_jaeger.png"}
+                                    .caption
+                                        %h4 Doug Jeager
+                                        %small Treasurer
+                            %li.span3
+                                .thumbnail
                                     %img{:src => "/assets/board/chancey_anderson.png"}
                                     .caption
                                         %h4 Chancey Anderson
