--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -42,7 +42,7 @@
                                     %img{:src => "/assets/board/doug_jaeger.png"}
                                     .caption
                                         %h4 Doug Jeager
-                                        %small Treasurer
+                                        %small Former CEO of Adolfson & Peterson
                             %li.span3
                                 .thumbnail
                                     %img{:src => "/assets/board/chancey_anderson.png"}
