Add staff photos

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -34,6 +34,7 @@
                         %ul.thumbnails
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/rachel_hemsey.png')}
                                     .caption
                                         %h4 Rachel Hemsey
                                         %small Kindergarten Teacher/Leadership Team Member
@@ -42,6 +43,7 @@
                                             %a{:href => "mailto:rachelhemsey@prodeoacademy.org"} rachelhemsey@prodeoacademy.org
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/mandy_lindstrom.png')}
                                     .caption
                                         %h4 Mandy Lindstrom
                                         %small Kindergarten Teacher
@@ -50,6 +52,7 @@
                                             %a{:href => "mailto:mandylindstrom@prodeoacademy.org"} mandylindstrom@prodeoacademy.org
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/ashley_willeck.png')}
                                     .caption
                                         %h4 Ashley Willeck
                                         %small Kindergarten Teacher
@@ -63,6 +66,7 @@
                         %ul.thumbnails
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/jordan_sallis.png')}
                                     .caption
                                         %h4 Jordan Sallis
                                         %small Fitness Coordinator
@@ -71,6 +75,7 @@
                                             %a{:href => "mailto:jordansallis@prodeoacademy.org"} jordansallis@prodeoacademy.org
                             %li.span4
                                 .thumbnail
+                                    %img{:src => "//placehold.it/175x200"}
                                     .caption
                                         %h4 Camille Sypura
                                         %small Core Teacher
@@ -84,6 +89,7 @@
                         %ul.thumbnails
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/kelly_mulvehill.png')}
                                     .caption
                                         %h4 Kelly Mulvehill
                                         %small External Relations Director,
@@ -98,6 +104,7 @@
                         %ul.thumbnails
                             %li.span4
                                 .thumbnail
+                                    %img{:src => asset_path('board/ady_perez.png')}
                                     .caption
                                         %h4 Ady Perez
                                         %small Office and Teaching Assistant
